syntax = "proto3";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/onehub/protos";
package onehub.v1;

import "onehub/v1/models.proto";
import "google/api/annotations.proto";

/**
 * Service for operating on messages
 */
service MessageService {
  /**
   * Create a single message or messages in batch
   */
  rpc CreateMessages(CreateMessagesRequest) returns (CreateMessagesResponse) {
    option (google.api.http) = {
      post: "/v1/topics/{topic_id=*}/messages",
      body: "*",
    };
  }

  /**
   * Import messages in bulk
   */
  rpc ImportMessages(ImportMessagesRequest) returns (ImportMessagesResponse) {
    option (google.api.http) = {
      post: "/v1/messages:import",
      body: "*",
    };
  }

  /**
   * List all messages in a topic
   */
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse) { 
    option (google.api.http) = {
      get: "/v1/topics/{topic_id=*}/messages"
    };
  }

  /**
   * Get a particular message
   */
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) { 
    option (google.api.http) = {
      get: "/v1/messages/{id=*}"
    };
  }

  /**
   * Batch get multiple messages by IDs
   */
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) { 
    option (google.api.http) = {
      get: "/v1/messages:batchGet"
    };
  }

  /**
   * Delete a particular message
   */
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse) { 
    option (google.api.http) = {
      delete: "/v1/messages/{id=*}"
    };
  }

  /**
   * Update a message within a topic.
   */
  rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse) {
      option (google.api.http) = {
          patch: "/v1/messages/{message.id=*}"
          body: "*"
      };
  }
}

/**
 * Message creation request object
 */
message CreateMessagesRequest {
  /**
   * Topic where messages are being created
   */
  string topic_id = 1;

  /**
   * Message being updated
   */
  repeated Message messages = 2;

  /**
   * Whether to allow custom user IDs or whether to
   * force user IDs to be overridden to the logged in user.
   * In batch mode we want the option to have diff user IDs
   * In prod - we want to ensure that only Admins can provide
   * this option.
   */
  bool allow_userids = 3;
}

/**
 * Response of an message creation.
 */
message CreateMessagesResponse {
  /**
   * Message being created
   */
  repeated Message messages = 1;
}

/**
 * Bulk importing of messages with very minimal checks.
 * Here no validation is performed on the messages (ie checking topic IDS)
 * setting current user id, setting created/updated time stamps etc.
 * 
 * Use this either for recovery (typically you should do DR on the DB) or
 * or for testing.
 */
message ImportMessagesRequest {
  /**
   * Message being updated
   */
  repeated Message messages = 2;
}

/**
 * Response of an message import.
 */
message ImportMessagesResponse {
  /**
   * Message being created
   */
  repeated Message messages = 1;
}

/**
 * A message listing request.  For now only paginations params are provided.
 */
message ListMessagesRequest {
  /**
   * Topic in which messages are to be listed.  Required.
   */
  string topic_id = 1;


  /**
   * Pagination prameters.
   */
  Pagination pagination = 2;
}

/**
 * Response of a topic search/listing.
 */
message ListMessagesResponse {
  /**
   * The list of topics found as part of this response.
   */
  repeated Message messages = 1;

  /**
   * Pagination response info
   */
  PaginationResponse pagination = 2;
}

/**
 * Request to get a single message.
 */
message GetMessageRequest {
  /**
   * ID of the topic to be fetched
   */
  string id = 1;
}

/**
 * Message get response
 */
message GetMessageResponse {
  Message message = 1;
}

/**
 * Request to batch get messages
 */
message GetMessagesRequest {
  /**
   * IDs of the messages to be fetched
   */
  repeated string ids = 1;
}

/**
 * Message batch-get response
 */
message GetMessagesResponse {
  map<string, Message> messages = 1;
}

/**
 * Request to delete an message
 */
message DeleteMessageRequest {
  /**
   * ID of the message to be deleted.
   */
  string id = 1;
}

/**
 * Message deletion response
 */
message DeleteMessageResponse {
}

message UpdateMessageRequest {
  // The message being updated.  The topic ID AND message ID fields *must*
  // be specified in this message object.  How other fields are used is
  // determined by the update_mask parameter enabling partial updates
  Message message = 1;

  // Indicates which fields are being updated
  // If the field_mask is *not* provided then we reject
  // a replace (as required by the standard convention) to prevent
  // full replace in error.  Instead an update_mask of "*" must be passed.
  google.protobuf.FieldMask update_mask = 3;

  // Any fields specified here will be "appended" to instead of being
  // replaced
  google.protobuf.FieldMask append_mask = 4;
}

message UpdateMessageResponse {
  // The updated message
  Message message = 1;
}
